# Listening-Archive

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
backend/: app.py  config.py  database.py  llm_client.py  mcp_server.py  spotify_client.py
backend/ingestion/: spotify_export.py
backend/rag/: artist_rag.py  embeddings.py  genre_rag.py  lyrics_rag.py  memory_rag.py  notes_rag.py
data/: demo_data.json
frontend/: index.html
