[project]
name = "listening-archive"
version = "0.1.0"
description = "A private, locally-run alternative to the annual Spotify recap — with five RAG layers and an MCP server."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    # --- ML stack, pinned for Intel Mac compatibility ---
    # NumPy 2.0 broke ABI compatibility. Torch 2.2 was built against NumPy 1.x.
    "numpy>=1.24,<2.0",
    # PyTorch 2.3+ dropped macosx_x86_64 wheels (early 2024).
    "torch>=2.2,<2.3",
    "sentence-transformers>=2.6,<3.0",
    # onnxruntime 1.20+ dropped Intel Mac wheels.
    "onnxruntime>=1.17,<1.20",
    "chromadb>=0.5,<0.6",
    # --- Everything below is pure Python or has wheels for all platforms ---
    "google-generativeai>=0.7",
    "mcp>=0.9",
    "beautifulsoup4>=4.12",
]

[dependency-groups]
dev = ["ruff>=0.4", "pytest>=8.0"]

[tool.ruff]
line-length = 110
target-version = "py310"
